<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbarParametres"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/textColorPrimaryDark"
        app:title="MainActivity"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetEnd="16dp"

        app:layout_constraintBaseline_toTopOf="parent"/>

    <TextView
        android:id="@+id/IndicatoOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:textColor="#36DC2D"
        app:layout_constraintTop_toBottomOf="@id/toolbarParametres" />

    <TextView
        android:id="@+id/IndicatoOffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:textColor="#FF3B30"
        app:layout_constraintTop_toBottomOf="@id/toolbarParametres" />


    <EditText
        android:id="@+id/editTextPseudo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/IndicatoOnline"
        android:hint="@string/pseudo"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_goneMarginEnd="10dp"
        tools:ignore="VisualLintTextFieldSize"
        android:textColorHighlight="@color/accentColor"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPseudo"
        android:hint="@string/mot_de_passe"
        android:autofillHints="name"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_goneMarginEnd="10dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ok"
        android:textColorHighlight="@color/accentColor"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/textColorPrimaryDark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>